test/seq/cmdlists/invalid_wait3.err
SyntaxError: Invalid wait command: expecting `)`
Line: 3, Column: 11
wait(10 us
          ^
